--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       href="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg"
     />
 
-    <title>Innovance App</title>
+    <title>Apple App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
